--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,14 @@
     "require": {
         "phpunit/phpunit": "~5.6.0",
         "twig/twig": "~1.0",
-        "symfony/yaml": "~3.1.0"
+        "symfony/yaml": "~3.1.0",
+        "keyboardcowboy/caldom": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "KeyboardCowboy\\CalDom\\Pages\\": "pages/",
+            "KeyboardCowboy\\CalDom\\Components\\": "src/",
+            "KeyboardCowboy\\CalDom\\Calendars\\": "calendars/"
+        }
     }
 }
