--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
         "phpunit/phpunit": "~5.6.0",
         "twig/twig": "~1.0",
         "symfony/yaml": "~3.1.0",
-        "keyboardcowboy/caldom": "dev-master"
+        "keyboardcowboy/caldom": "~0.1"
     },
     "autoload": {
         "psr-4": {
